--- a/lesson_3/Gemfile
+++ b/lesson_3/Gemfile
@@ -7,6 +7,7 @@ git_source(:github) { |repo_name| "https://github.com/#{repo_name}" }
 # gem "rails"
 gem 'faraday'
 gem 'faraday_middleware'
+gem 'dotenv'
 
 group :development do
   gem 'pry-byebug'
