--- a/lesson_14/Gemfile
+++ b/lesson_14/Gemfile
@@ -3,7 +3,9 @@
 source 'https://rubygems.org'
 
 git_source(:github) { |repo_name| "https://github.com/#{repo_name}" }
-gem 'colorize'
+gem 'faker'
+gem 'i18n'
+gem 'russian', '~> 0.6.0'
 group :development do
   gem 'pry-byebug'
   gem 'rubocop'
