Course_work_3, ref. task_3

--- a/course_work_3/Gemfile
+++ b/course_work_3/Gemfile
@@ -4,6 +4,8 @@ source 'https://rubygems.org'
 
 git_source(:github) { |repo_name| "https://github.com/#{repo_name}" }
 
+gem 'tty-table'
+
 group :development do
   gem 'pry-byebug'
   gem 'rubocop'
